codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_mid_turn_compaction_replaces_ephemeral_context_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote mid-turn continuation compaction keeps both prior and active additional_context in the compact request, then reinjects only the active turn additional_context into the continuation request.\",\n&[(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_request),])"
---
Scenario: Remote mid-turn continuation compaction keeps both prior and active additional_context in the compact request, then reinjects only the active turn additional_context into the continuation request.

## Remote Compaction Request
00:message/developer:<PERMISSIONS_INSTRUCTIONS>
01:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:<additional_context>\n  <title>Context from my editor</title>\n ...
03:message/user:SETUP_USER
04:message/assistant:REMOTE_SETUP_REPLY
05:message/user:<additional_context>\n  <title>Context from my editor</title>\n ...
06:message/user:USER_TWO
07:function_call/test_tool
08:function_call_output:unsupported call: test_tool

## Remote Post-Compaction History Layout
00:message/user:SETUP_USER
01:message/developer:<PERMISSIONS_INSTRUCTIONS>
02:message/user[3]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
    [03] <additional_context>\n  <title>Context from my editor</title>\n ...
03:message/user:USER_TWO
04:compaction:encrypted=true
